# ycbvideo

./: .gitignore  LICENSE  MANIFEST.in  README.md  datatypes.py  frameselection.py  requirements.txt  setup.cfg  utils.py  ycbvideo.py
.github/workflows/: python-publish.yml
data/tests/: README.md  selections.txt
data/tests/ycb_video_dataset/data/0002/: 000001-box.txt  000001-meta.mat  000002-box.txt  000002-meta.mat  000003-box.txt  000003-meta.mat  000004-box.txt  000004-meta.mat  000005-box.txt  000005-meta.mat
data/tests/ycb_video_dataset/special_data/0003/: 000138-box.txt  000138-meta.mat
src/ycbvideo/: __init__.py  __main__.py  dataset_access.py  datatypes.py  descriptor_creation.py  frame_access.py  frame_info.txt  frameselection.py  info.py  loader.py  parsing.py  selectors.py  utils.py
tests/: README.md  conftest.py  test_dataset_access.py  test_datatypes.py  test_frameselection.py  test_info.py  test_loader.py  test_parsing.py  test_selectors.py  test_utils.py
ycbvideo/: frameselection.py  utils.py
