[metadata]
name = ycbvideo
version = file: src/ycbvideo/VERSION
author = Ole Priebusch
author_email = opriebusch@web.de
description = A small package to ease working with the YCB-Video dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oprb/ycbvideo
project_urls =
    Bug Tracker = https://github.com/oprb/ycbvideo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    imageio >= 2.10
    numpy >= 1.21
include_package_data = True
[options.packages.find]
where = src
[options.package_data]
ycbvideo = frames_info.txt
